2011-10-10 Javier Lanz <javier.lanz@artica.es>

	* util/pandora_manage.pl: Fixed a wee bug with 'group' parameter
	creating events

2011-10-06  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Restored the _id_alert_ macro. Thanks to
	  Koichiro.

2011-10-06  Koichiro KIKUCHI  <koichiro@rworks.jp>

	* util/pandora_manage.pl: Added support for specifying ff_threthold
	  value for network, snmp and plugin module creation.

2011-10-06  Koichiro Kikuchi <koichiro@rworks.jp>

	* lib/PandoraFMS/DB.pm: Added function to get module group name.
	* lib/PandoraFMS/Core.pm: Added new alert macros.

2011-09-29  Sancho Lerena <slerena@artica.es>

	* pandora_server/lib/PandoraFMS/SNMPServer.pm
	pandora_server/lib/PandoraFMS/Core.pm: SNMP Alerts now receibe trap type on
	the _data_ macro.

2011-09-28 Dario Rodriguez <dario.rodriguez@artica.es>

	* util/recon_scripts/snmpdevices.pl: Fixed a bug which creates duplicated
	modules when running the script.

2011-09-27 Dario Rodriguez <dario.rodriguez@artica.es>
	
	* util/pandora_manage.pl: Changed way to create and event now is possible
	to create an event without agent_name and without agent_module.

2011-09-26  Vanessa Gil  <vanessa.gil@artica.es>

	* pandora_server/util/pandora_manage.pl: Fixed bad behaviour of several
	Pandora CLI options.

2011-09-23 Sancho Lerena <slerena@artica.es>

	* util/pandora_db.pl: Fixed bug when a blank space was behind
	the data in the .conf file.

	* util/pandora_diagnostic.sh,
	util/pandora_db.pl,
	util/pandora_manage.pl,
	util/pandora_dbstress.pl: Updated version strings.

2011-09-23 Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Config.pm: Updated version.

	* lib/PandoraFMS/NetworkServer.pm: Fixed problem with SNMP v2 
	due incorrect call to snmpget.

2011-09-23 Dario Rodriguez <dario.rodriguez@artica.es>
	
	* lib/PandoraFMS/NmapParser.pm: Added an error handler to avoid 
	error during NmapParser lib execution.

2011-09-22  Junichi Satoh <junichi@rworks.jp>
