@@ -1,3 +1,8 @@
+2011-10-10 Dario Rodriguez <dario.rodriguez@artica.es>
+
+	* util/plugin/ipmi-plugin.pl: Added first version of ipmi plugin.
+	* util/recon_scripts/ipmi-recon.pl: Added first version of ipmi recon task
+
 2011-10-10 Javier Lanz <javier.lanz@artica.es>
 
 	* util/pandora_manage.pl: Fixed a wee bug with 'group' parameter
